--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     />
     <link href="http://fonts.cdnfonts.com/css/filson-pro?styles=96082" rel="stylesheet">
     <link rel="apple-touch-icon" href="logo192.html" />
-    <title>Hangi EasyFishoil</title>
+    <title>Welches EasyFishoil?</title>
     <script defer="defer" src="/src/index.js"></script>
     <link href="/src/App.css" rel="stylesheet" />
   </head>
